package com.messages;

public enum PMessageType {
    USER, COLOR, FILE
}
