package com.messages;

public enum SMessageType {
    DISCONNECTED, CONNECTED, STATUS, USER, SERVER, NOTIFICATION, VOICE, CHANNEL, OPENP2P, CLOSEP2P, PICTURE
}
