@startuml

title __MESSAGES's Class Diagram__\n

  namespace com.messages {
    class com.messages.PMessage {
        - color : String
        - file : byte[]
        - message : String
        - sender : String
        + PMessage()
        + PMessage()
        + getColor()
        + getFile()
        + getMessage()
        + getSender()
        + getType()
        + setColor()
        + setFile()
        + setMessage()
        + setSender()
        + setType()
        + toJSON()
    }
  }
  

  namespace com.messages {
    enum PMessageType {
      COLOR
      FILE
      USER
    }
  }
  

  namespace com.messages {
    class com.messages.Peer {
        - name : String
        - sourceHost : String
        - sourcePort : int
        + getName()
        + getSourceHost()
        + getSourcePort()
        + setName()
        + setSourceHost()
        + setSourcePort()
    }
  }
  

  namespace com.messages {
    class com.messages.SMessage {
        - channel : String
        - count : int
        - list : ArrayList<User>
        - msg : String
        - name : String
        - picture : String
        - pictureMsg : byte[]
        - users : ArrayList<User>
        - voiceMsg : byte[]
        + SMessage()
        + getChannel()
        + getMsg()
        + getName()
        + getOnlineCount()
        + getPeer()
        + getPicture()
        + getPictureMsg()
        + getStatus()
        + getType()
        + getUserlist()
        + getUsers()
        + getVoiceMsg()
        + setChannel()
        + setMsg()
        + setName()
        + setOnlineCount()
        + setPeer()
        + setPicture()
        + setPictureMsg()
        + setStatus()
        + setType()
        + setUserlist()
        + setUsers()
        + setVoiceMsg()
    }
  }
  

  namespace com.messages {
    enum SMessageType {
      CHANNEL
      CLOSEP2P
      CONNECTED
      DISCONNECTED
      NOTIFICATION
      OPENP2P
      PICTURE
      SERVER
      STATUS
      USER
      VOICE
    }
  }
  

  namespace com.messages {
    enum Status {
      AWAY
      BUSY
      ONLINE
    }
  }
  

  namespace com.messages {
    class com.messages.User {
        - name : String
        - picture : String
        + User()
        + User()
        + getName()
        + getPicture()
        + getStatus()
        + setName()
        + setPicture()
        + setStatus()
    }
  }
  

  com.messages.PMessage .up.|> java.io.Serializable
  com.messages.PMessage o-- com.messages.PMessageType : type
  com.messages.Peer .up.|> java.io.Serializable
  com.messages.SMessage .up.|> java.io.Serializable
  com.messages.SMessage o-- com.messages.Peer : peer
  com.messages.SMessage o-- com.messages.Status : status
  com.messages.SMessage o-- com.messages.SMessageType : type
  com.messages.User .up.|> java.io.Serializable
  com.messages.User o-- com.messages.Status : status


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
